chore: upload coverage reports

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,13 +1,4 @@
-flag_management:
-  individual_flags:
-    - name: smart-tests
-      carryforward: true
-      carryforward_mode: "labels"
-      statuses:
-        - type: "project"
-        - type: "patch"
-
-cli:
-  plugins:
-    pycoverage:
-      report_type: "json"
+- name: Upload coverage reports to Codecov
+    uses: codecov/codecov-action@v4.0.1
+    with:
+      token: ${{ secrets.CODECOV_TOKEN }}
